syntax = "proto2";

package hive.protocol.buffers;

/* Using comment operation a user may create a post or a comment.
 * From the blockchain point of view, it is the same operation â€“ always comment.
 * If a comment has no parent, it is a post.
 * The parent of the comment may be a post or a comment.
 * Users may comment their own comments.
 *
 * Description https://gitlab.syncad.com/hive/hive/-/blob/develop/doc/devs/operations/01_comment.md?ref_type=heads
 */
message comment {
    // @param {string} parent_author - Account name, the author of the commented post or comment. 
    //                                 If the operation creates a post, it is empty.
    //                                 It cannot be modified.
    required string parent_author = 1 [json_name = "parent_author"];

    // @param {string} parent_permlink - The identifier of the commented post or comment.
    //                                   When a user creates a post, it may contain the identifier of the community
    //                                   (e.g. hive-174695) or main tag (e.g. travel).
    //                                   It cannot be modified.
    required string parent_permlink = 2 [json_name = "parent_permlink"];

    // @param {string} author - Account name, the author of the post or the comment.
    //                          It cannot be modified.
    required string author = 3;

    // @param {string} permlink - Unique to the author, the identifier of the post or comment.
    //                            It cannot be modified.
    required string permlink = 4;

    // @param {string} title - The title of the submitted post, in case of the comment, is often empty.
    //                         It may be modified.
    required string title = 5;

    // @param {string} body - The content of the post or the comment.
    //                        It may be modified.
    required string body = 6;

    // @param {string} json_metadata - There is no blockchain validation on json_metadata,
    //                                 but the structure has been established by the community.
    //                                 From the blockchain point of view it is a json file.
    //                                 For the second layer, the following keys may be used:
    //                                 - app, e.g. peakd/2023.2.3
    //                                 - format, e.g. markdown
    //                                 - tags, e.g. photography
    //                                 - users
    //                                 - images
    required string json_metadata = 7 [json_name = "json_metadata"];
}
