syntax = "proto2";

import "vote.proto";
import "comment.proto";
import "transfer.proto";
import "transfer_to_vesting.proto";
import "withdraw_vesting.proto";
import "limit_order_create.proto";
import "limit_order_cancel.proto";
import "feed_publish.proto";
import "convert.proto";
import "account_create.proto";
import "account_update.proto";
import "witness_update.proto";
import "account_witness_vote.proto";
import "account_witness_proxy.proto";
import "pow.proto";
import "custom.proto";
import "witness_block_approve.proto";
import "delete_comment.proto";
import "custom_json.proto";
import "comment_options.proto";
import "set_withdraw_vesting_route.proto";
import "limit_order_create2.proto";
import "claim_account.proto";
import "create_claimed_account.proto";
import "request_account_recovery.proto";
import "recover_account.proto";
import "change_recovery_account.proto";
import "escrow_transfer.proto";
import "escrow_dispute.proto";
import "escrow_release.proto";
import "pow2.proto";
import "escrow_approve.proto";
import "transfer_to_savings.proto";
import "transfer_from_savings.proto";
import "cancel_transfer_from_savings.proto";
import "decline_voting_rights.proto";
import "claim_reward_balance.proto";
import "delegate_vesting_shares.proto";
import "account_create_with_delegation.proto";
import "witness_set_properties.proto";
import "account_update2.proto";
import "create_proposal.proto";
import "update_proposal_votes.proto";
import "remove_proposal.proto";
import "update_proposal.proto";
import "collateralized_convert.proto";
import "recurrent_transfer.proto";

// Virtual operations:
import "fill_convert_request.proto";
import "author_reward.proto";
import "curation_reward.proto";
import "comment_reward.proto";
import "liquidity_reward.proto";
import "interest.proto";
import "fill_vesting_withdraw.proto";
import "fill_order.proto";
import "shutdown_witness.proto";
import "fill_transfer_from_savings.proto";
import "hardfork.proto";
import "comment_payout_update.proto";
import "return_vesting_delegation.proto";
import "comment_benefactor_reward.proto";
import "producer_reward.proto";
import "clear_null_account_balance.proto";
import "proposal_pay.proto";
import "dhf_funding.proto";
import "hardfork_hive.proto";
import "hardfork_hive_restore.proto";
import "delayed_voting.proto";
import "consolidate_treasury_balance.proto";
import "effective_comment_vote.proto";
import "ineffective_delete_comment.proto";
import "dhf_conversion.proto";
import "expired_account_notification.proto";
import "changed_recovery_account.proto";
import "transfer_to_vesting_completed.proto";
import "pow_reward.proto";
import "vesting_shares_split.proto";
import "account_created.proto";
import "fill_collateralized_convert_request.proto";
import "system_warning.proto";
import "fill_recurrent_transfer.proto";
import "failed_recurrent_transfer.proto";
import "limit_order_cancelled.proto";
import "producer_missed.proto";
import "proposal_fee.proto";
import "collateralized_convert_immediate_conversion.proto";
import "escrow_approved.proto";
import "escrow_rejected.proto";
import "proxy_cleared.proto";
import "declined_voting_rights.proto";

package hive.protocol.buffers;

/* NOTE: do not change the order of any operations prior to the virtual operations
 * or it will trigger a hardfork.
 */
message operation {
    oneof value {
        vote vote_operation = 1 [json_name = "vote_operation"];
        comment comment_operation = 2 [json_name = "comment_operation"];
        transfer transfer_operation = 3 [json_name = "transfer_operation"];
        transfer_to_vesting transfer_to_vesting_operation = 4 [json_name = "transfer_to_vesting_operation"];
        withdraw_vesting withdraw_vesting_operation = 5 [json_name = "withdraw_vesting_operation"];
        limit_order_create limit_order_create_operation = 6 [json_name = "limit_order_create_operation"];
        limit_order_cancel limit_order_cancel_operation = 7 [json_name = "limit_order_cancel_operation"];
        feed_publish feed_publish_operation = 8 [json_name = "feed_publish_operation"];
        convert convert_operation = 9 [json_name = "convert_operation"];
        account_create account_create_operation = 10 [json_name = "account_create_operation"];
        account_update account_update_operation = 11 [json_name = "account_update_operation"];
        witness_update witness_update_operation = 12 [json_name = "witness_update_operation"];
        account_witness_vote account_witness_vote_operation = 13 [json_name = "account_witness_vote_operation"];
        account_witness_proxy account_witness_proxy_operation = 14 [json_name = "account_witness_proxy_operation"];
        pow pow_operation = 15 [json_name = "pow_operation"];
        custom custom_operation = 16 [json_name = "custom_operation"];
        witness_block_approve witness_block_approve_operation = 17 [json_name = "witness_block_approve_operation"];
        delete_comment delete_comment_operation = 18 [json_name = "delete_comment_operation"];
        custom_json custom_json_operation = 19 [json_name = "custom_json_operation"];
        comment_options comment_options_operation = 20 [json_name = "comment_options_operation"];
        set_withdraw_vesting_route set_withdraw_vesting_route_operation = 21 [json_name = "set_withdraw_vesting_route_operation"];
        limit_order_create2 limit_order_create2_operation = 22 [json_name = "limit_order_create2_operation"];
        claim_account claim_account_operation = 23 [json_name = "claim_account_operation"];
        create_claimed_account create_claimed_account_operation = 24 [json_name = "create_claimed_account_operation"];
        request_account_recovery request_account_recovery_operation = 25 [json_name = "request_account_recovery_operation"];
        recover_account recover_account_operation = 26 [json_name = "recover_account_operation"];
        change_recovery_account change_recovery_account_operation = 27 [json_name = "change_recovery_account_operation"];
        escrow_transfer escrow_transfer_operation = 28 [json_name = "escrow_transfer_operation"];
        escrow_dispute escrow_dispute_operation = 29 [json_name = "escrow_dispute_operation"];
        escrow_release escrow_release_operation = 30 [json_name = "escrow_release_operation"];
        pow2 pow2_operation = 31 [json_name = "pow2_operation"];
        escrow_approve escrow_approve_operation = 32 [json_name = "escrow_approve_operation"];
        transfer_to_savings transfer_to_savings_operation = 33 [json_name = "transfer_to_savings_operation"];
        transfer_from_savings transfer_from_savings_operation = 34 [json_name = "transfer_from_savings_operation"];
        cancel_transfer_from_savings cancel_transfer_from_savings_operation = 35 [json_name = "cancel_transfer_from_savings_operation"];
        decline_voting_rights decline_voting_rights_operation = 37 [json_name = "decline_voting_rights_operation"];
        claim_reward_balance claim_reward_balance_operation = 40 [json_name = "claim_reward_balance_operation"];
        delegate_vesting_shares delegate_vesting_shares_operation = 41 [json_name = "delegate_vesting_shares_operation"];
        account_create_with_delegation account_create_with_delegation_operation = 42 [json_name = "account_create_with_delegation_operation"];
        witness_set_properties witness_set_properties_operation = 43 [json_name = "witness_set_properties_operation"];
        account_update2 account_update2_operation = 44 [json_name = "account_update2_operation"];
        create_proposal create_proposal_operation = 45 [json_name = "create_proposal_operation"];
        update_proposal_votes update_proposal_votes_operation = 46 [json_name = "update_proposal_votes_operation"];
        remove_proposal remove_proposal_operation = 47 [json_name = "remove_proposal_operation"];
        update_proposal update_proposal_operation = 48 [json_name = "update_proposal_operation"];
        collateralized_convert collateralized_convert_operation = 49 [json_name = "collateralized_convert_operation"];
        recurrent_transfer recurrent_transfer_operation = 50 [json_name = "recurrent_transfer_operation"];

        // Virtual operations:
        fill_convert_request fill_convert_request_operation = 100 [json_name = "fill_convert_request_operation"];
        author_reward author_reward_operation = 101 [json_name = "author_reward_operation"];
        curation_reward curation_reward_operation = 102 [json_name = "curation_reward_operation"];
        comment_reward comment_reward_operation = 103 [json_name = "comment_reward_operation"];
        liquidity_reward liquidity_reward_operation = 104 [json_name = "liquidity_reward_operation"];
        interest interest_operation = 105 [json_name = "interest_operation"];
        fill_vesting_withdraw fill_vesting_withdraw_operation = 106 [json_name = "fill_vesting_withdraw_operation"];
        fill_order fill_order_operation = 107 [json_name = "fill_order_operation"];
        shutdown_witness shutdown_witness_operation = 108 [json_name = "shutdown_witness_operation"];
        fill_transfer_from_savings fill_transfer_from_savings_operation = 109 [json_name = "fill_transfer_from_savings_operation"];
        hardfork hardfork_operation = 110 [json_name = "hardfork_operation"];
        comment_payout_update comment_payout_update_operation = 111 [json_name = "comment_payout_update_operation"];
        return_vesting_delegation return_vesting_delegation_operation = 112 [json_name = "return_vesting_delegation_operation"];
        comment_benefactor_reward comment_benefactor_reward_operation = 113 [json_name = "comment_benefactor_reward_operation"];
        producer_reward producer_reward_operation = 114 [json_name = "producer_reward_operation"];
        clear_null_account_balance clear_null_account_balance_operation = 115 [json_name = "clear_null_account_balance_operation"];
        proposal_pay proposal_pay_operation = 116 [json_name = "proposal_pay_operation"];
        dhf_funding dhf_funding_operation = 117 [json_name = "dhf_funding_operation"];
        hardfork_hive hardfork_hive_operation = 118 [json_name = "hardfork_hive_operation"];
        hardfork_hive_restore hardfork_hive_restore_operation = 119 [json_name = "hardfork_hive_restore_operation"];
        delayed_voting delayed_voting_operation = 120 [json_name = "delayed_voting_operation"];
        consolidate_treasury_balance consolidate_treasury_balance_operation = 121 [json_name = "consolidate_treasury_balance_operation"];
        effective_comment_vote effective_comment_vote_operation = 122 [json_name = "effective_comment_vote_operation"];
        ineffective_delete_comment ineffective_delete_comment_operation = 123 [json_name = "ineffective_delete_comment_operation"];
        dhf_conversion dhf_conversion_operation = 124 [json_name = "dhf_conversion_operation"];
        expired_account_notification expired_account_notification_operation = 125 [json_name = "expired_account_notification_operation"];
        changed_recovery_account changed_recovery_account_operation = 126 [json_name = "changed_recovery_account_operation"];
        transfer_to_vesting_completed transfer_to_vesting_completed_operation = 127 [json_name = "transfer_to_vesting_completed_operation"];
        pow_reward pow_reward_operation = 128 [json_name = "pow_reward_operation"];
        vesting_shares_split vesting_shares_split_operation = 129 [json_name = "vesting_shares_split_operation"];
        account_created account_created_operation = 130 [json_name = "account_created_operation"];
        fill_collateralized_convert_request fill_collateralized_convert_request_operation = 131 [json_name = "fill_collateralized_convert_request_operation"];
        system_warning system_warning_operation = 132 [json_name = "system_warning_operation"];
        fill_recurrent_transfer fill_recurrent_transfer_operation = 133 [json_name = "fill_recurrent_transfer_operation"];
        failed_recurrent_transfer failed_recurrent_transfer_operation = 134 [json_name = "failed_recurrent_transfer_operation"];
        limit_order_cancelled limit_order_cancelled_operation = 135 [json_name = "limit_order_cancelled_operation"];
        producer_missed producer_missed_operation = 136 [json_name = "producer_missed_operation"];
        proposal_fee proposal_fee_operation = 137 [json_name = "proposal_fee_operation"];
        collateralized_convert_immediate_conversion collateralized_convert_immediate_conversion_operation = 138 [json_name = "collateralized_convert_immediate_conversion_operation"];
        escrow_approved escrow_approved_operation = 139 [json_name = "escrow_approved_operation"];
        escrow_rejected escrow_rejected_operation = 140 [json_name = "escrow_rejected_operation"];
        proxy_cleared proxy_cleared_operation = 141 [json_name = "proxy_cleared_operation"];
        declined_voting_rights declined_voting_rights_operation = 142 [json_name = "declined_voting_rights_operation"];
    }
}
